Tidy the mechanism registry, its SPI javadoc and two tests